@@ -1,3 +1,15 @@
+2012-11-21  Andrey Adaikin  <aandrey@chromium.org>
+
+        Web Inspector: [Canvas] throttle wait icon in the ui
+        https://bugs.webkit.org/show_bug.cgi?id=102685
+
+        Reviewed by Vsevolod Vlasov.
+
+        Do not show the wait icon for small operations during the replay to reduce flickering.
+
+        * inspector/front-end/CanvasProfileView.js:
+        (WebInspector.CanvasProfileView.prototype._enableWaitIcon):
+
 2012-11-21  Kunihiko Sakamoto  <ksakamoto@chromium.org>
 
         Enable datalist UI for input types datetime and datetime-local
